--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -149,9 +149,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Part_Design_improvements">Further Part Design improvements</span></h3>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Points_Workbench">Points Workbench</span></h2>
-</div>
+<p><span id="Points_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Arbeitsbereich_Points">Arbeitsbereich Points</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Points_improvements">Further Points improvements</span></h3>
 </div>
@@ -199,12 +199,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165728
+Cached time: 20260114165739
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.048 seconds
-Real time usage: 0.060 seconds
+CPU time usage: 0.050 seconds
+Real time usage: 0.068 seconds
 Preprocessor visited node count: 256/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -215,14 +215,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.001      1 -total
- 56.08%    3.926      2 Template:Message
- 21.98%    1.539      1 Template:VeryImportantMessage
- 21.00%    1.470      1 Template:FileName
- 17.80%    1.246      1 Template:TOCright
+100.00%   10.002      1 -total
+ 43.99%    4.400      2 Template:Message
+ 29.20%    2.921      1 Template:TOCright
+ 23.62%    2.363      1 Template:VeryImportantMessage
+ 22.08%    2.209      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165728 and revision id 1738378. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165739 and revision id 1738380. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
