--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -167,9 +167,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Robot_improvements">Further Robot improvements</span></h3>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Sketcher_Workbench">Sketcher Workbench</span></h2>
-</div>
+<p><span id="Sketcher_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Arbeitsbereich_Sketcher">Arbeitsbereich Sketcher</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Sketcher_improvements">Further Sketcher improvements</span></h3>
 </div>
@@ -199,12 +199,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165751
+Cached time: 20260114165805
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.052 seconds
-Real time usage: 0.090 seconds
+CPU time usage: 0.054 seconds
+Real time usage: 0.068 seconds
 Preprocessor visited node count: 256/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -215,14 +215,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.317      1 -total
- 59.98%   10.387      2 Template:Message
- 22.76%    3.941      1 Template:VeryImportantMessage
- 17.36%    3.007      1 Template:FileName
- 15.29%    2.648      1 Template:TOCright
+100.00%   10.817      1 -total
+ 49.98%    5.406      2 Template:Message
+ 30.07%    3.253      1 Template:VeryImportantMessage
+ 23.30%    2.521      1 Template:FileName
+ 16.49%    1.784      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165751 and revision id 1738382. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165804 and revision id 1738384. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
