--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -176,9 +176,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>It is now possible to import B&eacute;zier and Offset curves as <span typeof="mw:File"><a href="../index.php?title=Sketcher_Projection.svg&amp;filetimestamp=20241129200338&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Projection.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Projection.html" title="Sketcher Projection">External geometry</a>. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25144">Pull request #25144</a></li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Spreadsheet_Workbench">Spreadsheet Workbench</span></h2>
-</div>
+<p><span id="Spreadsheet_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Arbeitsbereich_Spreadsheet">Arbeitsbereich Spreadsheet</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Spreadsheet_improvements">Further Spreadsheet improvements</span></h3>
 </div>
@@ -199,12 +199,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165805
+Cached time: 20260114165813
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.054 seconds
-Real time usage: 0.068 seconds
+CPU time usage: 0.055 seconds
+Real time usage: 0.074 seconds
 Preprocessor visited node count: 256/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -215,14 +215,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.817      1 -total
- 49.98%    5.406      2 Template:Message
- 30.07%    3.253      1 Template:VeryImportantMessage
- 23.30%    2.521      1 Template:FileName
- 16.49%    1.784      1 Template:TOCright
+100.00%    9.863      1 -total
+ 54.44%    5.370      2 Template:Message
+ 30.71%    3.029      1 Template:FileName
+ 24.33%    2.400      1 Template:VeryImportantMessage
+ 17.53%    1.729      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165804 and revision id 1738384. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165813 and revision id 1738386. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
