--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -188,9 +188,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Surface_improvements">Further Surface improvements</span></h3>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="TechDraw_Workbench">TechDraw Workbench</span></h2>
-</div>
+<p><span id="TechDraw_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Arbeitsbereich_TechDraw">Arbeitsbereich TechDraw</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_TechDraw_improvements">Further TechDraw improvements</span></h3>
 </div>
@@ -199,12 +199,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165821
+Cached time: 20260114165830
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.051 seconds
-Real time usage: 0.068 seconds
+CPU time usage: 0.069 seconds
+Real time usage: 0.088 seconds
 Preprocessor visited node count: 256/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -215,14 +215,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.734      1 -total
- 49.27%    4.796      2 Template:Message
- 32.06%    3.121      1 Template:VeryImportantMessage
- 21.99%    2.141      1 Template:FileName
- 15.06%    1.466      1 Template:TOCright
+100.00%   11.717      1 -total
+ 48.35%    5.665      2 Template:Message
+ 25.20%    2.953      1 Template:TOCright
+ 23.50%    2.754      1 Template:VeryImportantMessage
+ 18.89%    2.213      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165821 and revision id 1738388. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165830 and revision id 1738390. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
