--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -194,17 +194,17 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_TechDraw_improvements">Further TechDraw improvements</span></h3>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Import_and_export">Import and export</span></h2>
-</div>
+<p><span id="Import_and_export"></span>
+</p>
+<h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114165830
+Cached time: 20260114165843
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.088 seconds
+CPU time usage: 0.046 seconds
+Real time usage: 0.071 seconds
 Preprocessor visited node count: 256/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -215,14 +215,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.717      1 -total
- 48.35%    5.665      2 Template:Message
- 25.20%    2.953      1 Template:TOCright
- 23.50%    2.754      1 Template:VeryImportantMessage
- 18.89%    2.213      1 Template:FileName
+100.00%   15.129      1 -total
+ 67.96%   10.282      2 Template:Message
+ 20.11%    3.043      1 Template:VeryImportantMessage
+  9.92%    1.501      1 Template:TOCright
+  9.69%    1.466      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165830 and revision id 1738390. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165843 and revision id 1738392. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
