--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -37,9 +37,7 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="Core_system_and_API"></span>
 </p>
 <h2><span class="mw-headline" id="Kernsystem_und_API">Kernsystem und API</span></h2>
-<p><span id="Core"></span>
-</p>
-<h3><span class="mw-headline" id="Kern">Kern</span></h3>
+<h3><span class="mw-headline" id="Core">Core</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table cellpadding="5">
 <tbody><tr>
@@ -199,13 +197,13 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114165843
+Cached time: 20260114165901
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.046 seconds
+CPU time usage: 0.057 seconds
 Real time usage: 0.071 seconds
-Preprocessor visited node count: 256/1000000
+Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
 Highest expansion depth: 5/100
@@ -215,14 +213,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.129      1 -total
- 67.96%   10.282      2 Template:Message
- 20.11%    3.043      1 Template:VeryImportantMessage
-  9.92%    1.501      1 Template:TOCright
-  9.69%    1.466      1 Template:FileName
+100.00%   10.405      1 -total
+ 41.61%    4.329      2 Template:Message
+ 36.80%    3.829      1 Template:VeryImportantMessage
+ 18.05%    1.878      1 Template:TOCright
+ 15.23%    1.585      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165843 and revision id 1738392. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165901 and revision id 1738394. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
