--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -91,9 +91,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="CAM_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_CAM">Arbeitsbereich CAM</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_CAM_improvements">Further CAM improvements</span></h3>
-</div>
+<p><span id="Further_CAM_improvements"></span>
+</p>
+<h3><span class="mw-headline" id="Weitere_CAM-Verbesserungen">Weitere CAM-Verbesserungen</span></h3>
 <p><span id="Draft_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Draft">Arbeitsbereich Draft</span></h2>
@@ -197,12 +197,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114165937
+Cached time: 20260114165946
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.053 seconds
-Real time usage: 0.067 seconds
+CPU time usage: 0.066 seconds
+Real time usage: 0.080 seconds
 Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -213,14 +213,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.345      1 -total
- 45.47%    2.885      2 Template:Message
- 33.16%    2.104      1 Template:VeryImportantMessage
- 16.77%    1.064      1 Template:FileName
- 16.74%    1.062      1 Template:TOCright
+100.00%    9.242      1 -total
+ 38.16%    3.527      2 Template:Message
+ 37.60%    3.475      1 Template:TOCright
+ 21.98%    2.031      1 Template:FileName
+ 20.08%    1.856      1 Template:VeryImportantMessage
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165937 and revision id 1738398. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165946 and revision id 1738400. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
