--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -103,9 +103,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="FEM_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_FEM">Arbeitsbereich FEM</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_FEM_improvements">Further FEM improvements</span></h3>
-</div>
+<p><span id="Further_FEM_improvements"></span>
+</p>
+<h3><span class="mw-headline" id="Weitere_FEM-Verbesserungen">Weitere FEM-Verbesserungen</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>The <span typeof="mw:File"><a href="../index.php?title=FEM_ConstraintElectricChargeDensity.svg&amp;filetimestamp=20250329180554&amp;.html" class="mw-file-description"><img src="../File/FEM_ConstraintElectricChargeDensity.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_ElectricChargeDensity.html" title="FEM ElectricChargeDensity">Electric Charge Density</a> load now has a <i>Concentrated</i> checkbox in the <i>Total Source</i> mode to use concentrate instead of distributed load (making it also applicable to edges and vertices) with CalculiX. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25237">Pull request #25237</a></li>
 <li>The <span typeof="mw:File"><a href="../index.php?title=FEM_ResultShow.svg&amp;filetimestamp=20241127174549&amp;.html" class="mw-file-description"><img src="../File/FEM_ResultShow.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_ResultShow.html" title="FEM ResultShow">FEM results objects</a> now support the animation of half cycles in addition to reversed full cycles. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24129">Pull request #24129</a></li>
@@ -197,12 +197,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114165955
+Cached time: 20260114170003
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.041 seconds
-Real time usage: 0.052 seconds
+CPU time usage: 0.066 seconds
+Real time usage: 0.153 seconds
 Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -213,14 +213,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.826      1 -total
- 46.64%    2.717      2 Template:Message
- 29.58%    1.723      1 Template:VeryImportantMessage
- 20.72%    1.207      1 Template:FileName
- 19.93%    1.161      1 Template:TOCright
+100.00%   20.512      1 -total
+ 40.33%    8.273      1 Template:VeryImportantMessage
+ 30.10%    6.174      2 Template:Message
+ 12.32%    2.527      1 Template:FileName
+ 12.16%    2.494      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165955 and revision id 1738402. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170003 and revision id 1738404. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
