--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -111,9 +111,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <li>The <span typeof="mw:File"><a href="../index.php?title=FEM_ResultShow.svg&amp;filetimestamp=20241127174549&amp;.html" class="mw-file-description"><img src="../File/FEM_ResultShow.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_ResultShow.html" title="FEM ResultShow">FEM results objects</a> now support the animation of half cycles in addition to reversed full cycles. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24129">Pull request #24129</a></li>
 <li>The <span typeof="mw:File"><a href="../index.php?title=FEM_ConstraintSectionPrint.svg&amp;filetimestamp=20241127174351&amp;.html" class="mw-file-description"><img src="../File/FEM_ConstraintSectionPrint.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_ConstraintSectionPrint.html" title="FEM ConstraintSectionPrint">Section Print</a> feature now supports 2D models and electric flux in electrostatic analyses. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25081">Pull request #25081</a></li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Inspection_Workbench">Inspection Workbench</span></h2>
-</div>
+<p><span id="Inspection_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Arbeitsbereich_Inspection">Arbeitsbereich Inspection</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Inspection_improvements">Further Inspection improvements</span></h3>
 </div>
@@ -197,12 +197,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170003
+Cached time: 20260114170023
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.066 seconds
-Real time usage: 0.153 seconds
+CPU time usage: 0.052 seconds
+Real time usage: 0.113 seconds
 Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -213,14 +213,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.512      1 -total
- 40.33%    8.273      1 Template:VeryImportantMessage
- 30.10%    6.174      2 Template:Message
- 12.32%    2.527      1 Template:FileName
- 12.16%    2.494      1 Template:TOCright
+100.00%   17.933      1 -total
+ 49.98%    8.962      2 Template:Message
+ 30.26%    5.426      1 Template:VeryImportantMessage
+ 17.33%    3.108      1 Template:TOCright
+ 10.59%    1.899      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170003 and revision id 1738404. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170023 and revision id 1738406. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
