--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -114,9 +114,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="Inspection_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Inspection">Arbeitsbereich Inspection</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Inspection_improvements">Further Inspection improvements</span></h3>
-</div>
+<p><span id="Further_Inspection_improvements"></span>
+</p>
+<h3><span class="mw-headline" id="Weitere_Inspection-Verbesserungen">Weitere Inspection-Verbesserungen</span></h3>
 <p><span id="Material_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Material">Arbeitsbereich Material</span></h2>
@@ -197,12 +197,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170023
+Cached time: 20260114170035
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.052 seconds
-Real time usage: 0.113 seconds
+CPU time usage: 0.051 seconds
+Real time usage: 0.070 seconds
 Preprocessor visited node count: 255/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -213,14 +213,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.933      1 -total
- 49.98%    8.962      2 Template:Message
- 30.26%    5.426      1 Template:VeryImportantMessage
- 17.33%    3.108      1 Template:TOCright
- 10.59%    1.899      1 Template:FileName
+100.00%    5.158      1 -total
+ 48.55%    2.504      2 Template:Message
+ 28.60%    1.475      1 Template:VeryImportantMessage
+ 18.48%    0.953      1 Template:TOCright
+ 18.40%    0.949      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170023 and revision id 1738406. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170035 and revision id 1738408. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
